--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,7 @@
+---
+import "./src/styles/global.css";
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -8,15 +12,26 @@
 		<title>Astro Basics</title>
 	</head>
 	<body>
-		<slot />
+		<div>
+			<slot />
+		</div>
 	</body>
 </html>
 
 <style>
+	@import "tailwindcss";
 	html,
 	body {
 		margin: 0;
 		width: 100%;
 		height: 100%;
+	}
+
+	body {
+		@apply grid place-items-center p-20 
+	}
+
+	body > div {
+		@apply container;
 	}
 </style>
