--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,11 @@
 ---
 import "./src/styles/global.css";
+
+interface LayoutProps {
+	title: string;
+}
+
+const { title } = Astro.props;
 ---
 
 <!doctype html>
@@ -9,7 +15,7 @@ import "./src/styles/global.css";
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>{title}</title>
 	</head>
 	<body>
 		<div>
