--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,11 +24,16 @@ console.log(books);
 						return (
 							<article class="flex">
 								<a href={`/libro/${slug}`} class="mb-2 xl:mb-0 transition hover:scale-110">
-									<img class="mr-5 w-48 rounded" src={`/${img}`} alt={title} class="w-full rounded-lg" />
+									<img 
+										transition:name={`img-${slug}`}
+										class="mr-5 w-48 rounded" 
+										src={`/${img}`} 
+										alt={title} 
+									/>
 								</a>
 
 								<div class="flex flex-col justify-center">
-									<h2 class="mb-2 text-2xl font-bold leading-tight text-black">
+									<h2 transition:name={`title-${title}`} class="mb-2 text-2xl font-bold leading-tight text-black">
 										{title}
 									</h2>
 
