--- a/src/pages/libro/[id].astro
+++ b/src/pages/libro/[id].astro
@@ -12,7 +12,7 @@ export async function getStaticPaths() {
 }
 
 const { book } = Astro.props;
-const { data  } = book;
+const { data, slug } = book;
 const { title, author, description, img, readtime, buy  } = data;
 
 const { Content } = await render(book); // renderiza el contenido markdown del archivo
@@ -21,12 +21,17 @@ const { Content } = await render(book); // renderiza el contenido markdown del a
 <Layout title={`${title} - Dev Books`}>
     <div class="flex justify-evenly gap-12">
         <aside class="flex flex-col items-center gap- 4">
-            <img class="rounded w-80 h-auto" src={`/${img}`} alt={title} />
+            <img 
+                transition:name={`img-${slug}`}
+                class="rounded w-80 h-auto"
+                src={`/${img}`}
+                alt={title}
+            />
             <!-- enlace para comprar -->
         </aside>
 
         <main class="max-w-3xl">
-            <h1 class="text-4xl font-bold mb-4">{title}</h1>
+            <h1 transition:name={`title-${title}`} class="text-4xl font-bold mb-4">{title}</h1>
             <div class="prose">
                 <Content />
             </div>
