--- a/src/pages/libro/[id].astro
+++ b/src/pages/libro/[id].astro
@@ -4,6 +4,7 @@ import { SHOW_BUY_BUTTON } from "astro:env/server";
 import Layout from "../../layouts/Layout.astro";
 import AmazonLogo from "../../components/AmazonLogo.astro";
 import BookScore from "../../components/BookScore.astro";
+import BuyButton from "../../components/BuyButton.astro";
 
 export async function getStaticPaths() {
     const books = await getCollection("books");
@@ -36,17 +37,7 @@ export const prerender = true;
             <BookScore server:defer id={slug} >
                 <span slot="fallback" class="m-4 text-xs opacity-70">Cargando puntuación ...</span>
             </BookScore>
-            {SHOW_BUY_BUTTON && (
-                <a 
-                    href={buy.chile}
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    class="text-balance inline-flex gap-2 items-center bg-yellow-400 hover:bg-yellow-500 active:bg-yellow-600 text-black font-bold py-2 px-4 rounded-lg border border-yellow-500 transition duration-200 ease-in-out hover:scale-105 justify-center text-center"
-                >
-                    Comprar en Amazon
-                    <AmazonLogo />
-                </a>
-            )}
+            {SHOW_BUY_BUTTON && <BuyButton server:defer buy={buy} />}
         </aside>
 
         <main class="max-w-3xl">
